# robotics_ws

./: README.md  mapping_rosbag.yaml
GroundPlane_detection/: .CMakeLists.txt.un~  .Makefile.un~  CMakeLists.txt  CMakeLists.txt~  Makefile  detection.cpp  main
GroundPlane_detection/results/: RANSAC.pcd  originalvoxel.pcd  voxel_rgb.pcd
GroundPlane_detection/src/: .clone_detection.cpp.un~  .detection.cpp.un~  detection.cpp  detection.cpp~
maps/: mapping_rosbag.pgm
turtlebot3/: map.yaml
turtlebot3/maps/: data_mapping.bag  map.pgm  turtlebot3_world.pgm  turtlebot3_world.yaml
